Correction bug webcam + gitignore uplaods

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1,48 +1,63 @@
-bienvenueFr: bienvenue
-bienvenueCa: benvinguts
-bienvenueEs: bienvenidos
-bienvenueEn: welcome
-messageCa: abans d'accedir a les installacions, han d'omplir i acceptar el següent document
-messageEs: antes de accesder a las instalaciones debe rellenar y aceptar el siguiente documento
-messageFr: avant d'accéder aux installations, vous devez remplir et accepter le document suivant
-messageEn: before accessing the installations you must fill in amd accept the following document
-donneesUser: données utilisateur
-nom: nom
-prenom: prenom
-age: âge
-miniAge: (âge minimum de 16 ans obligatoire)
-moi: je sousigné
-certif: "certifie que:"
-souffrePas: Je ne souffre pas
-souffre: Je souffre
-os: de problèmes de dos, cou, épaule, genoux, articulations, prothèse...
-coeur: de problèmes cardiaques
-probleme: crise d'anxiété, d'épilepsie, d'attaque de panique, de vertiges ...
-espace: de désorientation dans l'espace
-equilibre: de problèmes d'audition, d'équilibre, de la pression sur les thympans...
-vu: de mauvaise vue
-capaOk: J'ai une très bonne capacité
-capaNok: J'ai une mauvaise capacité
-nager: pour nager et faire des distances d'au moins 25m
-plonger: pour plonger sous l'eau
-declare: "déclare que je respecterai:"
-regle: Les règles de chaque attraction
-regle2: Sorties sémaphores
-regle3: Les règles des Sauveteurs
-regle4: Postures utilisation appropriée de chaque attraction
-p1: Aussi, j'ai fourni certifier l'information véridique et
-p2: déclare pouvoir utiliser l'attraction AQUA X JUMP,
-p3: répondant à mes actions en cas d'accident.
 accepte: "J'accepte toutes les présentes conditions:"
-securite: Lire les normes de sécurité
+age: âge
+bienvenueCa: Bienvenue
+bienvenueEn: Welcome
+bienvenueEs: Bienvenidos
+bienvenueFr: Bienvenue
+capaNok: J'ai une mauvaise capacité
+capaOk: J'ai une très bonne capacité
+certif: ", certifie que :"
+coeur: de problèmes cardiaques
+declare: "déclare que je respecterai:"
+deso: Nous sommes désolés
 donnee: Lire la protection des données
-deso: nous sommes désolés
-pSecure1: pour votre sécurité l'accès à cette attraction est interdit
-pSecure2: Vous pouvew profiter de toutes les autres attractions qu'offre Aquabrava
-pSecure3: toujours consulter LES CONDITIONS D'UTILISATION de chaque attraction.
-felicitation: toutes nos félicitations
-pOk1: vous pouvez utiliser l'attraction
-pOk2: au cours de l'accès (... pas compris les traductions)
-pOk3: phrase 3
-pOk4: Elle sera prise...
-pOk5: photographie
+donneesUser: Données utilisateur
+equilibre: "de problèmes d'audition, d'équilibre, de pression sur les thympans..."
+espace: de désorientation dans l'espace
+felicitation: Toutes nos félicitations
+messageCa: >-
+  abans d'accedir a les installacions, han d'omplir i acceptar el següent
+  document
+messageEn: >-
+  before accessing the installations you must fill in amd accept the following
+  document
+messageEs: >-
+  antes de accesder a las instalaciones debe rellenar y aceptar el siguiente
+  documento
+messageFr: >-
+  avant d'accéder aux installations, vous devez remplir et accepter le document
+  suivant
+miniAge: "(âge minimum obligatoire : 16 ans )"
+moi: Je soussigné
+nager: pour nager et faire des distances d'au moins 25m
+nom: Nom
+os: "de problèmes de dos, cou, épaules, genoux, articulations, prothèse..."
+p1: "Aussi, Je certifie les informations et"
+p2: "déclare pouvoir utiliser l'attraction AQUA X JUMP,"
+p3: étant responsable de mes actions en cas d'accident.
+pOk1: Vous êtes autorisé à acceder à l'attraction
+pOk2: Vos données sont enregistrées
+pOk3: Enfin de pouvoir être reconnu par le contrôle d'accès
+pOk4: Nos devons prendre 5 photos
+pOk5: Patientez en fixant l'écran
+pSecure1: "Pour votre sécurité, l'accès à cette attraction vous est interdit"
+pSecure2: >-
+  Vous pouvez profiter de toutes les autres attractions que vous propose
+  Aquabrava
+pSecure3: >-
+  Nous vous rappelons de toujours consulter LES CONDITIONS D'UTILISATION de
+  chaque attraction.
+plonger: pour nager sous l'eau
+prenom: Prénom
+probleme: "crise d'anxiété, d'épilepsie, d'attaque de panique, de vertiges ..."
+regle: Les règles de chaque attraction
+regle2: Départ feu rouge/vert
+regle3: Les règles et directives des Maitres-nageurs
+regle4: Postures et positions appropriées de chaque attraction
+securite: Lire les normes de sécurité
+souffre: Je souffre
+souffrePas: Je ne souffre pas
+vu: de mauvaise vue
+error: Champs manquants
+fermer: Cliquer pour fermer
+photo: "Photo: "
