--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1,2 +1,60 @@
+accepte: 'I accept all these conditions:'
+age: Age
+bienvenueCa: Welcome
+bienvenueEn: Welcome
+bienvenueEs: Welcome
+bienvenueFr: Welcome
+capaNok: I have a bad ability
+capaOk: I have a very good ability
+certif: ', certifies that :'
+coeur: heart problems
+declare: 'declare that I will respect:'
+deso: We are sorry
+donnee: Read data protection
+donneesUser: User data
+equilibre: 'hearing problems, balance, pressure on the thympans ...'
+error: Missing fields
+espace: I don't weigh more than 120kg
+felicitation: Congratulations
+fermer: Click to close
+messageCa: >-
+  abans to access the installations, han to accomplish i acceptar el següent
+  document
+messageEn: >-
+  before accessing the installations you must fill in amd accept the following
+  document
+messageEs: >-
+  antes to access the instalaciones debe rellenar y aceptar el siguiente
+  documento
+messageFr: >-
+  before accessing the facilities, you must complete and accept the following
+  document
+miniAge: '(mandatory minimum age: 16 years old)'
+moi: I the undersigned
+nager: to swim and do distances of at least 25m
 nom: lastname
+os: 'back problems, neck, shoulders, knees, joints, prosthesis ...'
+p1: 'Also, I certify the information and'
+p2: 'declares to be able to use the AQUA X JUMP attraction,'
+p3: being responsible for my actions in the event of an accident.
+pFelicitation: You are authorized to access the attraction. Please wait 4 to 5 minutes before arriving at the entrance of the attraction.
+pOk1: 'In order to be authorized to access the attraction,'
+pOk2: 'and be recognized by access control,'
+pOk3: we have to take a picture of you
+pOk4: Don't move and stare at the screen
+pSecure1: 'For your safety, access to this attraction is prohibited'
+pSecure2: You can enjoy all the other attractions that Aquabrava has to offer
+pSecure3: We remind you to always consult THE TERMS OF USE of each attraction.
+photo: 'Photo:'
+plonger: to swim underwater
 prenom: firstname
+probleme: 'anxiety attack, epilepsy, panic attack, dizziness ...'
+regle: The rules of each attraction
+regle2: Red / green light start
+regle3: Rules and guidelines from lifeguards
+regle4: Appropriate postures and positions of each attraction
+securite: Read the safety standards
+souffre: I am suffering
+souffrePas: I don't suffer
+vu: 'with poor eyesight, disorientation in space'
+
